--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 
 .position {
     float: left;
+    margin-left: 10px;
 }
 
 .centered {
@@ -21,5 +22,5 @@
 }
 
 #fight {
-    margin: 250px 0 0 10px;
+    margin-top: 250px;
 }
